objects/BMCServiceDesk__SLA_Milestones__c.object
<CustomObject>
    <description>SLA milestones</description>
    <fields>
        <fullName>BMCServiceDesk__Condition__c</fullName>
        <label>When</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage of Time Elapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of Time Remaining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Target is Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Target is Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Target is Missed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Target Warning Occurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Elapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Remaining</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Days__c</fullName>
        <label>Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKService_Target__c</fullName>
        <label>Service Target</label>
        <referenceTo>BMCServiceDesk__Service_Target__c</referenceTo>
        <relationshipLabel>SLA Milestones</relationshipLabel>
        <relationshipName>SLA_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Hours__c</fullName>
        <label>Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Minutes__c</fullName>
        <label>Minutes</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Type__c</fullName>
        <formula>IF( ISPICKVAL(BMCServiceDesk__Condition__c, &apos;Service Target is Met&apos;), &apos;MET&apos;, 
    IF( ISPICKVAL(BMCServiceDesk__Condition__c,&apos;Service Target is Missed&apos;), &apos;MISS&apos;, 
        IF( ISPICKVAL(BMCServiceDesk__Condition__c,&apos;Service Target Warning Occurs&apos;), &apos;WARNING&apos;,
            IF( ISPICKVAL(BMCServiceDesk__Condition__c,&apos;Service Target is Canceled&apos;), &apos;CANCEL&apos;, &apos;TIME&apos;)
        )
    ) 
)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ValueInDaysHoursMinutes__c</fullName>
        <description>Milestone value in days hours minutes format.</description>
        <label>ValueInDaysHoursMinutes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Value__c</fullName>
        <description>Value is the milestone condition value
It can be either in:
Percentage or
Minutes</description>
        <label>Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SLA Milestone</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Condition__c</columns>
        <columns>BMCServiceDesk__Type__c</columns>
        <columns>BMCServiceDesk__Value__c</columns>
        <columns>BMCServiceDesk__FKService_Target__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>MilestoneID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>